sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:20: error: ';' expected but integer literal found.
                     }d+=1}
                         ^